KSENROLL-12011: Fix for layout issues in light box and edit section for Registration.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@66593 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/edit.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/edit.less
@@ -1,7 +1,7 @@
 /**** Edit section of card ****/
 
 .kscr-Edit{
-   padding: 0 0.5em 0.5em;
+   padding: 0 1em 0.5em;
    font-family: @secondaryFontFamily;
    font-size: 13px;
    font-weight: normal;
@@ -14,5 +14,4 @@
   font-size: 13px;
   font-weight: normal;
   color: @primaryTextColor;
-  padding-left: 1em;
 }
